--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
+    "react-slick": "^0.30.2",
     "sass": "^1.81.0",
     "styled-components": "^6.1.13"
   },
